# money-analyzer

./: .gitignore  AGENTS.md  BEADS_STATUS.md  README.md  pyproject.toml
.beads/: .migration-hint-ts  config.yaml  issues.jsonl
.github/workflows/: beads-status.yml  ci.yml
money_analyzer/: __init__.py  csv_io.py  models.py  utils.py
money_analyzer/cli/: __init__.py  combine_csv.py  ingest_pdf.py
money_analyzer/parsing/: base.py  pdf_text.py  router.py
money_analyzer/parsing/parsers/: __init__.py  c24.py  common.py  n26.py  vivid.py
scripts/: export_beads_status.py  n26_converter.py
tests/: test_parser_harness.py  test_pdf_parser_integration.py
tests/fixtures/: generate_statement_pdf_fixtures.py
tests/fixtures/expected/: c24_sample.csv  n26_sample.csv  vivid_sample.csv
tests/fixtures/statements/: c24_sample.txt  n26_sample.txt  vivid_sample.txt
