[project]
name = "money-analyzer"
version = "0.1.0"
description = "Family money analyzer with statement parsing pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pypdf>=5.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
money-ingest = "money_analyzer.cli.ingest_pdf:main"
money-combine = "money_analyzer.cli.combine_csv:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["money_analyzer*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
